--- a/Quizapp/src/main/resources/templates/accesscode.html
+++ b/Quizapp/src/main/resources/templates/accesscode.html
@@ -53,7 +53,7 @@
 <div class="container">
     <h2>Join Code</h2>
 
-    <div class="otp" th:text="${otp}"></div>
+    <div class="otp" th:text="${code}"></div>
 
 </div>
 
