--- a/Quizapp/src/main/resources/templates/datas.html
+++ b/Quizapp/src/main/resources/templates/datas.html
@@ -65,6 +65,7 @@
                 <th>Option C</th>
                 <th>Category</th>
                 <th>Correct Answer</th>
+                <th>Level</th>
             </tr>
         </thead>
         <tbody>
@@ -77,6 +78,7 @@
                 <td th:text="${row.optionc}"></td>
                 <td th:text="${row.category}"></td>
                 <td th:text="${row.crctans}"></td>
+                <td th:text="${row.level}"></td>
             </tr>
         </tbody>
     </table>
