--- a/Quizapp/src/main/resources/templates/index.html
+++ b/Quizapp/src/main/resources/templates/index.html
@@ -58,7 +58,7 @@
 
     <nav>
         <a href="/datas">Create Quiz</a>
-        <a href="#attendquiz">Attend Quiz</a>
+        <a href="/attendquiz">Attend Quiz</a>
         <a href="#signup">Sign Up</a>
     </nav>
 
