--- a/Quizapp/src/main/resources/templates/questionForm.html
+++ b/Quizapp/src/main/resources/templates/questionForm.html
@@ -76,9 +76,9 @@
             <label for="category">Category:</label>
             <select id="category" name="category" required>
                 <option value="">Select category</option>
-                <option value="Category A">Science</option>
-                <option value="Category B">Geography</option>
-                <option value="Category C">History</option>
+                <option value="Science">Science</option>
+                <option value="Geography">Geography</option>
+                <option value="History">History</option>
             </select>
         </div>
         <div class="form-group">
