--- a/Quizapp/src/main/resources/templates/quiz.html
+++ b/Quizapp/src/main/resources/templates/quiz.html
@@ -22,7 +22,7 @@
             <input
               type="radio"
               th:id="${'optionA' + index}"
-              th:name="answer"
+              name="answer"
               th:value="${data.optiona}"
             />
             <br />
@@ -33,7 +33,7 @@
             <input
               type="radio"
               th:id="${'optionB' + index}"
-              th:name="answer"
+              name="answer"
               th:value="${data.optionb}"
             />
             <br />
@@ -44,7 +44,7 @@
             <input
               type="radio"
               th:id="${'optionC' + index}"
-              th:name="answer"
+              name="answer"
               th:value="${data.optionc}"
             />
             <br />
