--- a/Quizapp/src/main/resources/templates/questionForm.html
+++ b/Quizapp/src/main/resources/templates/questionForm.html
@@ -73,6 +73,10 @@
             <input type="text" id="optionc" name="optionc" required>
         </div>
         <div class="form-group">
+            <label for="optionc">Option D:</label>
+            <input type="text" id="optionc" name="optiond" required>
+        </div>
+        <div class="form-group">
             <label for="category">Category:</label>
             <select id="category" name="category" required>
                 <option value="">Select category</option>
