--- a/Quizapp/src/main/resources/templates/datas.html
+++ b/Quizapp/src/main/resources/templates/datas.html
@@ -56,6 +56,7 @@
     <button class="create-button" onclick="location.href='/create'">Create</button>
     <button class="create-button" onclick="location.href='/deleteall'">Delete All</button>
     <button class="create-button" onclick="location.href='/generatecode'">Submit</button>
+    <button class="create-button" onclick="location.href='/'">Home</button>
 
         <table>
             <thead>
