--- a/Quizapp/src/main/resources/templates/index.html
+++ b/Quizapp/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My quiz</title>
+    <title >My quiz</title>
     <style>
         body {
             margin: 0;
@@ -27,6 +27,7 @@
             overflow: hidden;
             height: 60px; /* Set height of the navbar */
             transition: background-color 0.3s; /* Smooth transition for hover effect */
+            
         }
 
         nav:hover {
@@ -41,10 +42,12 @@
             padding: 20px; /* Larger padding for more clickable area */
             text-decoration: none;
             transition: background-color 0.3s; /* Smooth transition for hover effect */
+            
         }
 
         nav a:hover {
             background-color: rgba(230, 230, 0, 0.9); /* Darker yellow on hover with transparency */
+            
         }
 
         .container {
@@ -59,7 +62,7 @@
     <nav>
         <a href="/datas">Create Quiz</a>
         <a href="/attendquiz">Attend Quiz</a>
-        <a href="./signup">Sign Up</a>
+        <a href="/logout">Log Out</a>
     </nav>
 
     <div class="container">
